Add functionality to add and remove workout routines

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         </activity>
         <activity android:name=".AddRecipeActivity" android:theme="@style/AppTheme.CustomTheme">
         </activity>
+        <activity android:name=".DeleteRecipeActivity">
+        </activity>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
